# proposal-writer

./: .gitignore  AGENTS.md  CLAUDE.md  check-window.ps1  check-window2.ps1  launch-tauri.ps1  launch-tauri2.ps1  parse_transcript.js  show-window.ps1  test-detection.mjs  test-proposals.mjs  test-rehumanize.mjs  test-zerogpt.mjs
.claude/: settings.local.json
.github/workflows/: e2e.yml  release.yml
.husky/: commit-msg  pre-commit  pre-push
.ignore/brainstorming/: app-brainstorming-session-2026-01-29.md
_bmad-output/brainstorming/: app-brainstorming-session-2026-01-29.md  brainstorming-session-2026-01-29.md
_bmad-output/implementation-artifacts/: 0-1-basic-job-input-ui.md  0-1-basic-job-input-ui.story.md  0-2-claude-api-integration-for-basic-generation.story.md  0-3-streaming-ui-display.story.md  0-4-manual-copy-to-clipboard.story.md  0-5-validate-ai-detection-passing.story.md  1-1-sqlite-database-setup.story.md  1-10-export-proposals-to-json.story.md  1-11-database-migration-framework-setup.story.md  1-12-job-posts-table-schema.story.md  1-13-api-error-handling.story.md  1-14-draft-recovery-on-crash.md  1-14-draft-recovery-on-crash.story.md  1-15-onboarding-flow.md  (+133 more)
docs/: architecture.md  component-inventory.md  data-models.md  development-guide.md  index.md  macos-signing-setup.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  windows-code-signing.md
scripts/: test-version-bump.sh  windows-sign.ps1
upwork-researcher/: .prettierignore  .versionrc.cjs  ACCESSIBILITY-AUDIT-REPORT.md  CHANGELOG.md  CONVENTIONS.md  README.md  commitlint.config.cjs  eslint.config.js  index.html  package.json  playwright.config.ts  prettier.config.js  vite.config.ts  vitest.perf.config.ts
upwork-researcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test-output.txt  test_output.txt
upwork-researcher/src-tauri/.cargo/: config.toml
upwork-researcher/src-tauri/capabilities/: default.json
upwork-researcher/src-tauri/migrations/: V10__add_hidden_needs_to_job_posts.sql  V11__add_user_skills_table.sql  V12__add_job_scores_table.sql  V13__add_budget_fields_to_job_posts.sql  V14__add_color_flag_to_job_scores.sql  V15__add_rss_import_tracking.sql  V16__add_import_method_to_rss_imports.sql  V17__add_job_queue_indexes.sql  V18__add_scoring_feedback_table.sql  V19__add_hook_strategies_table.sql  V1__create_proposals_table.sql  V1__initial_schema.sql  V20__add_golden_set_proposals_table.sql  V21__create_voice_profiles_table.sql  V22__add_voice_length_preference.sql  V23__add_revision_type_and_restored_from.sql  V24__add_archived_revisions_column.sql  V25__add_proposals_edited_count.sql  V26__add_proposal_history_indexes.sql  V27__add_proposal_outcome_tracking.sql  V28__add_hook_strategy_status_columns.sql  V29__add_ab_testing_fields.sql  V2__add_settings_table.sql  V2__create_settings_table.sql  V30__create_remote_config_table.sql  V3__add_job_posts_table.sql  V4__add_draft_status.sql  V5__add_humanization_settings.sql  V6__add_encryption_metadata.sql  V7__add_safety_overrides_table.sql  V8__add_proposal_revisions_table.sql  V9__add_job_skills_table.sql
upwork-researcher/src-tauri/resources/: config-signing-key.pub  default-config.json
upwork-researcher/src-tauri/src/: ab_testing.rs  analysis.rs  archive.rs  archive_export.rs  archive_import.rs  claude.rs  config.rs  encryption_spike.rs  events.rs  health_check.rs  http.rs  humanization.rs  keychain.rs  lib.rs  main.rs  network.rs  remote-config-schema.json  remote_config.rs  sanitization.rs  scoring.rs
upwork-researcher/src-tauri/src/backup/: mod.rs  tests.rs
upwork-researcher/src-tauri/src/commands/: export.rs  hooks.rs  import.rs  job_queue.rs  mod.rs  proposals.rs  scoring_feedback.rs  system.rs  test_data.rs  voice.rs
upwork-researcher/src-tauri/src/db/: mod.rs
upwork-researcher/src-tauri/src/db/migrations/: V2__create_settings_table.sql
upwork-researcher/src-tauri/src/db/queries/: golden_set.rs  hook_strategies.rs  job_posts.rs  mod.rs  proposals.rs  remote_config.rs  revisions.rs  rss_imports.rs  safety_overrides.rs  scoring.rs  settings.rs  user_skills.rs  voice_profile.rs
upwork-researcher/src-tauri/src/job/: mod.rs  rss.rs  scraper.rs  types.rs
upwork-researcher/src-tauri/src/keychain/: recovery.rs  tests.rs
upwork-researcher/src-tauri/src/logs/: mod.rs  redaction.rs
upwork-researcher/src-tauri/src/migration/: mod.rs  tests.rs
upwork-researcher/src-tauri/src/passphrase/: mod.rs  tests.rs
upwork-researcher/src-tauri/src/voice/: analyzer.rs  mod.rs  profile.rs  prompt.rs
upwork-researcher/src-tauri/tests/: backup_integration.rs  migration_v23_test.rs  migration_v24_test.rs  migration_v26_test.rs  migration_verification.rs  passphrase_integration.rs  perplexity_analysis.rs  voice_profile_migration.rs
(+422 files in other folders)
