[package]
name = "upwork-research-agent"
version = "0.1.0"
description = "Upwork Research Agent - AI-assisted proposal generation"
authors = ["Zian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "upwork_research_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.9.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4", features = ["serde"] }

# Encryption spike dependencies (Story 1.6)
# These validate Argon2 + Keyring stack for Epic 2
# SQLCipher validation requires a separate spike project (see encryption_spike.rs notes)
argon2 = "0.5"
keyring = "3"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

