[package]
name = "upwork-research-agent"
version = "0.1.0"
description = "Upwork Research Agent - AI-assisted proposal generation"
authors = ["Zian"]
edition = "2021"
default-run = "upwork-research-agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "upwork_research_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.9.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "2.0.0-rc.22"
tauri-specta = { version = "2.0.0-rc.19", features = ["typescript"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
futures = "0.3"
# TD-5 AC-4: rusqlite uses platform-conditional SQLCipher features.
# See [target] sections below and .cargo/config.toml for full setup docs.
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4", features = ["serde"] }

# Encryption spike dependencies (Story 1.6)
# These validate Argon2 + Keyring stack for Epic 2
# SQLCipher validation requires a separate spike project (see encryption_spike.rs notes)
argon2 = "0.5"
keyring = "3"
rand = "0.8"
hex = "0.4" # For encoding encryption keys
base64 = "0.21" # For salt encoding/decoding
aes-gcm = "0.10" # AES-256-GCM authenticated encryption (Story 2.9 recovery key)
thiserror = "1.0" # For custom error types
zeroize = { version = "1.8", features = ["derive"] } # Secure memory zeroing (TD-3)

# Logging infrastructure (Story 1.16)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"

# Compression for archived revisions (Story 6.7)
flate2 = "1.0"

# Archive import utilities (Story 7.7)
scopeguard = "1.2"
uuid = { version = "1.7", features = ["v4"] }
fs2 = "0.4"

# Input sanitization (Story 4a.9)
unicode-normalization = "0.1"

# RSS feed parsing (Story 4b.7)
rss = "2.0"
regex = "1"

# Web scraping fallback (Story 4b.8)
scraper = "0.19"
url = "2.5"

# PDF text extraction (Story 5.3)
pdf-extract = "0.7"

# Performance monitoring (Story 8.10)
sysinfo = "0.30"

# TD-5 AC-4: Platform-conditional SQLCipher / OpenSSL configuration
# - Windows: bundled-sqlcipher links against system/vcpkg OpenSSL (no Perl/NASM needed)
# - macOS/Linux: bundled-sqlcipher-vendored-openssl compiles OpenSSL from source (just works)
[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

